infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
  namespace: dev-01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: yinglu91/m-moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
  namespace: dev-01
spec:
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
#infra/k8s/moderation-depl.yaml
